[package]
name = "floppascale"
version = "0.1.0"
edition = "2021"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
notify = { version = "7.0.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
skytable = "0.8.11"
tokio = { version = "1.41.1", features = ["full", "macros"] }
tokio-util = "0.7.12"
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
